@@ -335,7 +335,7 @@ $(LIBOBJDIR)/scip/cons_and.o: src/scip/cons_and.c src/scip/cons_and.h src/scip/s
  src/scip/buffer.h src/scip/type_buffer.h src/scip/struct_set.h \
  src/scip/tree.h src/scip/misc.h src/scip/var.h src/scip/event.h \
  src/scip/struct_event.h src/scip/cons_linear.h src/scip/cons_logicor.h \
- src/scip/cons_nonlinear.h src/scip/debug.h
+ src/scip/cons_nonlinear.h src/scip/cons_setppc.h src/scip/debug.h
 $(LIBOBJDIR)/scip/cons_bivariate.o: src/scip/cons_bivariate.c src/scip/cons_bivariate.h \
  src/scip/scip.h src/scip/def.h src/scip/type_retcode.h \
  src/scip/message.h src/scip/type_message.h src/scip/struct_message.h \
